--- a/_modules/services/longform_builder.html
+++ b/_modules/services/longform_builder.html
@@ -309,9 +309,7 @@
 <span class="sd">        ValueError: If table name is not in the whitelist.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">table</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">VALID_TABLES</span><span class="p">:</span>
-        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
-            <span class="sa">f</span><span class="s2">&quot;Invalid table name: </span><span class="si">{</span><span class="n">table</span><span class="si">}</span><span class="s2">. Must be one of </span><span class="si">{</span><span class="n">VALID_TABLES</span><span class="si">}</span><span class="s2">&quot;</span>
-        <span class="p">)</span>
+        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Invalid table name: </span><span class="si">{</span><span class="n">table</span><span class="si">}</span><span class="s2">. Must be one of </span><span class="si">{</span><span class="n">VALID_TABLES</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
 
 
 <span class="k">def</span><span class="w"> </span><span class="nf">_safe_json_loads</span><span class="p">(</span><span class="n">json_str</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">dict</span><span class="p">:</span>
