deploy: bcb55140415a32a3f94069cced1647f622053f2b

--- a/SCHEMA_REFERENCE.html
+++ b/SCHEMA_REFERENCE.html
@@ -357,6 +357,7 @@
     tags {
         TEXT id PK
         TEXT name
+        TEXT color
         REAL created_at
     }
 
@@ -752,7 +753,11 @@
 <td><p>TEXT</p></td>
 <td><p>NOT NULL UNIQUE</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">created_at</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">color</span></code></p></td>
+<td><p>TEXT</p></td>
+<td><p></p></td>
+</tr>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">created_at</span></code></p></td>
 <td><p>REAL</p></td>
 <td><p>NOT NULL</p></td>
 </tr>
