--- a/genindex.html
+++ b/genindex.html
@@ -395,6 +395,8 @@
 </li>
         <li><a href="core.html#core.calendar.CalendarDate">CalendarDate (class in core.calendar)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.clear_timeline_grouping_config">clear_timeline_grouping_config() (services.db_service.DatabaseService method)</a>
+</li>
         <li>
     cli
 
@@ -736,14 +738,22 @@
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_events_by_tag">get_events_by_tag() (services.db_service.DatabaseService method)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_events_for_group">get_events_for_group() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_events_grouped_by_tags">get_events_grouped_by_tags() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_group_counts">get_group_counts() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_group_metadata">get_group_metadata() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="services.html#services.db_service.DatabaseService.get_incoming_relations">get_incoming_relations() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="core.html#core.logging_config.get_logger">get_logger() (in module core.logging_config)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.db_service.DatabaseService.get_map">get_map() (services.db_service.DatabaseService method)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.db_service.DatabaseService.get_marker">get_marker() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_marker_by_composite">get_marker_by_composite() (services.db_service.DatabaseService method)</a>
@@ -760,11 +770,21 @@
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_relations">get_relations() (services.db_service.DatabaseService method)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_tag_by_name">get_tag_by_name() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_tag_color">get_tag_color() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="services.html#services.db_service.DatabaseService.get_tags_for_entity">get_tags_for_entity() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_tags_for_event">get_tags_for_event() (services.db_service.DatabaseService method)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_tags_with_events">get_tags_with_events() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_timeline_grouping_config">get_timeline_grouping_config() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="core.html#core.calendar.CalendarConfig.get_year_length">get_year_length() (core.calendar.CalendarConfig method)</a>
+</li>
+        <li><a href="services.html#services.worker.DatabaseWorker.grouping_dialog_data_loaded">grouping_dialog_data_loaded (services.worker.DatabaseWorker attribute)</a>
 </li>
         <li>
     gui
@@ -859,11 +879,13 @@
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_entity_details">load_entity_details() (services.worker.DatabaseWorker method)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.worker.DatabaseWorker.load_event_details">load_event_details() (services.worker.DatabaseWorker method)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.worker.DatabaseWorker.load_events">load_events() (services.worker.DatabaseWorker method)</a>
+</li>
+        <li><a href="services.html#services.worker.DatabaseWorker.load_grouping_dialog_data">load_grouping_dialog_data() (services.worker.DatabaseWorker method)</a>
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_longform_sequence">load_longform_sequence() (services.worker.DatabaseWorker method)</a>
 </li>
@@ -1101,8 +1123,6 @@
           <li><a href="services.html#module-services.text_parser">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     services.worker
 
@@ -1110,11 +1130,17 @@
           <li><a href="services.html#module-services.worker">module</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.db_service.DatabaseService.set_active_calendar_config">set_active_calendar_config() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.set_current_time">set_current_time() (services.db_service.DatabaseService method)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.set_tag_color">set_tag_color() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="core.html#core.theme_manager.ThemeManager.set_theme">set_theme() (core.theme_manager.ThemeManager method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.set_timeline_grouping_config">set_timeline_grouping_config() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="commands.html#commands.calendar_commands.SetActiveCalendarCommand">SetActiveCalendarCommand (class in commands.calendar_commands)</a>
 </li>
