--- a/genindex.html
+++ b/genindex.html
@@ -825,6 +825,8 @@
         </ul></li>
         <li><a href="services.html#services.text_parser.WikiLinkParser.ID_PREFIX_RE">ID_PREFIX_RE (services.text_parser.WikiLinkParser attribute)</a>
 </li>
+        <li><a href="services.html#services.worker.DatabaseWorker.index_object">index_object() (services.worker.DatabaseWorker method)</a>
+</li>
         <li><a href="services.html#services.worker.DatabaseWorker.initialize_db">initialize_db() (services.worker.DatabaseWorker method)</a>
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.initialized">initialized (services.worker.DatabaseWorker attribute)</a>
